<resources>
    <string name="app_name">SoloApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">STATUS</string>
    <string name="level_number">1</string>
    <string name="level">LEVEL</string>
    <string name="name_text">Name:</string>
    <string name="name">Name</string>
    <string name="title_text">Title:</string>
    <string name="title">Title</string>
    <string name="day_one">DAY 1</string>
    <string name="day_two">DAY 2</string>
    <string name="day_three">DAY 3</string>
    <string name="back">BACK</string>
</resources>