<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/rectMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="MenuRectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999">

        <ImageView
            android:id="@+id/rectStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="StatusRectangle"
            app:srcCompat="@drawable/rectstatus" />

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lato"
            android:shadowColor="#15B2F0"
            android:shadowRadius="15"
            android:text="@string/status"
            android:textColor="#C9F6FF"
            android:textSize="28sp"
            android:textStyle="bold" />
    </FrameLayout>

    <TextView
        android:id="@+id/levelNumber"
        android:layout_width="84dp"
        android:layout_height="58dp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:shadowColor="#15B2F0"
        android:shadowRadius="15"
        android:text="@string/level_number"
        android:textAlignment="center"
        android:textColor="#C9F6FF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <TextView
        android:id="@+id/levelText"
        android:layout_width="84dp"
        android:layout_height="41dp"
        android:layout_marginTop="-18dp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:shadowColor="#15B2F0"
        android:shadowRadius="10"
        android:text="@string/level"
        android:textAlignment="center"
        android:textColor="#C9F6FF"
        android:textSize="20sp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelNumber"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="59dp"
        android:layout_height="38dp"
        android:fontFamily="@font/lato"
        android:gravity="center_vertical|end"
        android:shadowColor="#15B2F0"
        android:shadowRadius="10"
        android:text="@string/name_text"
        android:textColor="#C9F6FF"
        android:textSize="18sp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="59dp"
        android:layout_height="38dp"
        android:fontFamily="@font/lato"
        android:gravity="center_vertical|end"
        android:shadowColor="#15B2F0"
        android:shadowRadius="10"
        android:text="@string/title_text"
        android:textColor="#C9F6FF"
        android:textSize="18sp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:backgroundTint="#00FAFAFA"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:gravity="start|center_vertical"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="10"
        android:shadowColor="#15B2F0"
        android:shadowRadius="15"
        android:text="@string/name"
        android:textColor="#C9F6FF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:backgroundTint="#00FAFAFA"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:gravity="start|center_vertical"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="10"
        android:shadowColor="#15B2F0"
        android:shadowRadius="15"
        android:text="@string/title"
        android:textColor="#C9F6FF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/buttonDayOne"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#AF0C1323"
        android:backgroundTintMode="src_in"
        android:fontFamily="sans-serif"
        android:minHeight="48dp"
        android:shadowColor="#15B2F0"
        android:shadowRadius="15"
        android:text="@string/day_one"
        android:textAlignment="center"
        android:textColor="#C9F6FF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767"
        app:strokeColor="#5C84ED"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/buttonDayTwo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#AF0C1323"
        android:backgroundTintMode="src_in"
        android:fontFamily="sans-serif"
        android:minHeight="48dp"
        android:shadowColor="#15B2F0"
        android:shadowRadius="15"
        android:text="@string/day_two"
        android:textAlignment="center"
        android:textColor="#C9F6FF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867"
        app:strokeColor="#5C84ED"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/buttonDayThree"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#AF0C1323"
        android:backgroundTintMode="src_in"
        android:fontFamily="sans-serif"
        android:minHeight="48dp"
        android:shadowColor="#15B2F0"
        android:shadowRadius="15"
        android:text="@string/day_three"
        android:textAlignment="center"
        android:textColor="#C9F6FF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909"
        app:strokeColor="#5C84ED"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>